# eclaire-wedding

./: .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  netlify.toml  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: test-pr.yml
.husky/: pre-commit
adapters/static/: vite.config.ts
netlify/functions/get_all/: Cargo.toml
netlify/functions/get_all/src/: main.rs
netlify/functions/rsvp/: Cargo.toml
netlify/functions/rsvp/src/: main.rs
netlify/functions/rsvpadd/: package.json  pnpm-lock.yaml  rsvpadd.ts
public/: eclaire-wedding.ics
scripts/: optimize.ts
src/: root.tsx
src/components/atoms/: Button.tsx  Input.tsx  Prose.tsx  TextArea.tsx  index.ts
src/components/icons/: Apple.tsx  ExtLink.tsx  GoogCalendar.tsx  GoogMaps.tsx  index.ts
src/components/molecule/: Card.tsx  Footer.tsx  Nav.tsx  Slider.tsx  index.ts
src/components/organisms/: GuestForm.tsx  RSVPForm.tsx
src/components/sections/: Hero.tsx
src/content/: info.mdx  lodging.mdx  ourstory.mdx  thingstodo.mdx
src/lib/: TypeWriter.ts  index.ts  nextTick.ts  promiseAwait.ts  registerDragScroll.ts  tryValidate.ts
src/routes/: global.css  index.tsx  layout.tsx
src/routes/where-to-stay/: index.tsx
src/types/: db.ts  index.ts  tailwindPlugins.ts  virtual.d.ts
src/utils/: classNames.tsx  inLocaleTime.ts
test/: TypeWriter.test.ts
