[package]
edition = "2018"
name = "rsvp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.7.3"
dotenv = "0.15.0"
http = "0.2.9"
lambda_runtime = "0.7.3"
log = "0.4.20"
postgrest = "1.6.0"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = "1.32.0"
